# OpenGL

Freeglut/Lab1/: CMakeLists.txt  chessboard.cpp  cube.cpp  cubes_x_y_z.cpp  teapot.cpp  zad1.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp
Freeglut/Lab2/: CMakeLists.txt  cube.cpp  fragment.glsl  house.h  lab4zad1.cpp  ogl.cpp  shader_stuff.h  vertex.glsl  zad1.cpp  zad1_fragment.glsl  zad2.cpp  zad2_fragment.glsl  zad2_vertex.glsl  zad3_fragment.glsl  zad3_fragment_g.glsl  zad4.cpp  zad4_fragment.glsl  zad4_vertex.glsl
Freeglut/Lab2/Lab2Exc/: CMakeLists.txt
Freeglut/Lab2/Lab2Exc/zad1/: zad1_fragment.glsl
Freeglut/Lab2/Lab2Exc/zad2/: zad2.cpp  zad2_fragment.glsl
Freeglut/Lab2/Lab2Exc/zad3/: zad3.cpp  zad3_vertex.glsl
Freeglut/Lab2/Lab2Exc/zad4/: zad4_fragment.glsl  zad4_vertex.glsl
Freeglut/Lab2/LectureExamples/: bufory.cpp  fragment.glsl  fragment2.glsl  fragment3.glsl  main.cpp  szablon.cpp  uniform.cpp  vertex.glsl  vertex2.glsl  vertex3.glsl
Freeglut/Lab3/: CMakeLists.txt  fragment.glsl  fragment2.glsl  lab5zad1.cpp  obj_loader.hpp  teapot.h  vertex.glsl  vertex2.glsl  zad3.cpp
Freeglut/Lab5/: CMakeLists.txt  GLProgram.cpp  GLProgram.hpp  shader_stuff.h  texture_loader.hpp  zad2.cpp  zad3.cpp  zad4.cpp
Freeglut/Lab5/shaders/: fragment1.glsl  gouraud_fragment2.glsl  gouraud_vertex2.glsl  ld_fragment2.glsl  ld_fragment3.glsl  ld_fragment4.glsl  ld_vertex3.glsl  ld_vertex4.glsl  normal_fragment2.glsl  normal_vertex2.glsl  off_fragment2.glsl  off_vertex2.glsl  phong_fragment2.glsl  phong_vertex2.glsl
Freeglut/Lab5/zad1/: zad1.cpp
(+8 files in other folders)
